--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ H: <input type="range" name="H" min="0" max="360" value="0" step="0.01" />
 	}
 	function hex(R, G, B) {
 		return `#${[R, G, B]
-			.map((x) => parseInt(x).toString(16).padStart(2, '0'))
+			.map((x) => Math.round(x).toString(16).padStart(2, '0'))
 			.join('')}`;
 	}
 	var inputs = [...document.querySelectorAll('input')];
