--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ H: <input type="range" name="H" min="0" max="360" value="0" step="0.01" />
 <style>
 	* {
 		box-sizing: border-box;
+		margin: 0;
 	}
 	html,
 	body {
